# max-externals

./: .gitmodules
simplemsp2~/: CMakeLists.txt  buffer.h  circular_buffer.h  simplemsp2~.c
simplemsp2~/include/lib/cmake/LSL/: LSLTargets-release.cmake  LSLTargets.cmake
simplemsp~/: simplemsp~.c
